<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/layout_second_back"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:background="@drawable/feedback1"
        android:gravity="bottom"
        android:orientation="vertical"
        android:padding="3dp" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="Still having the problem let us know.\nWe will help you"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <TextView
            android:id="@+id/status1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text=" "
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <EditText
            android:id="@+id/username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/input"
            android:hint="@string/hint_name"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_login_hint"
            android:textColorHint="@color/text_box" />
        
        <EditText
            android:id="@+id/password1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/input"
            android:hint="@string/hint_password"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_login_hint"
            android:textColorHint="@color/text_box" />

        <Button
            android:id="@+id/login1"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button"
            android:text="@string/btn_login"
            android:textColor="@color/white"
            android:textColorLink="@color/white" />

        <Button
            android:id="@+id/register"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button"
            android:text="@string/btn_link_to_register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp" />
       "
    </LinearLayout>

</LinearLayout>